--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/animated": "^10.0.3",
+    "@react-spring/three": "^10.0.3",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "framer-motion": "^12.33.0",
     "next": "15.5.12",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "three": "0.161.0",
-    "@react-three/fiber": "8.17.12",
-    "@react-three/drei": "9.102.4",
-    "framer-motion": "11.0.25"
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "scheduler": "^0.27.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/node": "20.12.12",
