--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,4 @@ CORS_ORIGINS=*
 PRECOMPUTE_SIGNAL_EMBEDDINGS=false
 
 # Frontend
-NEXT_PUBLIC_API_URL=http://localhost:8000
+NEXT_PUBLIC_API_URL=http://127.0.0.1:8000
